alignment fix

--- a/photography/assets/css/main.css
+++ b/photography/assets/css/main.css
@@ -349,7 +349,7 @@ input, select, textarea {
     overflow-x: auto; /* Horizontal scrolling */
     overflow-y: auto; /* Vertical scrolling */
     height: 100%;
-	min-height: calc(100vh - 300px); /* Ensure content fits below the fixed header */
+	min-height: calc(100vh - 220px); /* Ensure content fits below the fixed header */
     position: relative;
     z-index: 10;
     width: 100%;
@@ -556,9 +556,10 @@ input, select, textarea {
 				overflow-y: auto;
 				padding: 2.5px;
 				margin-top: 75px; /* Ensures content doesn't overlap the fixed header */
-				min-height: calc(100vh - 75px); /* Ensures proper height calculation */
-			    height: 100%;
-			}
+				height: calc(100vh - 75px); /* Ensures proper height calculation */
+			    justify-content: flex-start;
+				padding 10px	
+				}
 
 				#main .items {
 					-moz-flex-wrap: wrap;
